--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "node --watch src/server.js"
+    "start": "node src/http-server.js",
+    "start:stdio": "node src/server.js",
+    "dev": "node --watch src/http-server.js",
+    "dev:stdio": "node --watch src/server.js"
   },
   "keywords": ["mcp", "server", "ai", "customer-service", "sse"],
   "author": "AI Assistant",
